# email-triage-agent

./: .env.example  .gitignore  Makefile  README.md  Submission.md  app.py  project_working.md  pyproject.toml
data/: emails.json  orders.json  products.json
data/policies/: faq.md  return_policy.md  shipping_policy.md
evals/: RESULTS.md  scoring.py  test_agent.py  test_cases.json
skills/: catalog.md
skills/complaint_escalation/: SKILL.md
skills/general_inquiry/: SKILL.md
skills/order_inquiry/: SKILL.md
skills/product_question/: SKILL.md
skills/return_request/: SKILL.md
src/: agent.py  config.py  prompts.py  schemas.py  tools.py
